--- a/.github/workflows/olympix-security.yml
+++ b/.github/workflows/olympix-security.yml
@@ -8,6 +8,10 @@ on:
   # Allow manual runs
   workflow_dispatch:
 
+permissions:
+  security-events: write
+  contents: read
+
 jobs:
   upload-sarif:
     runs-on: ubuntu-latest
